UI overhaul in progress

--- a/1/EomTool/EomToolWeb/Views/Web.config
+++ b/1/EomTool/EomToolWeb/Views/Web.config
@@ -20,6 +20,7 @@
         <add namespace="EomToolWeb.HtmlHelpers" />
         <add namespace="EomToolWeb.Models" />
         <add namespace="EomTool.Domain.Entities" />
+        <add namespace="Kendo.Mvc.UI"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
