--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -47,11 +47,14 @@
   <ItemGroup>
     <Compile Include="Abstract\IAdmin.cs" />
     <Compile Include="Abstract\ICampaignRepository.cs" />
+    <Compile Include="Abstract\TopCampaignBy.cs" />
     <Compile Include="Concrete\AdminImpl.cs" />
     <Compile Include="Concrete\CampaignRepository.cs" />
     <Compile Include="Concrete\EFDbContext.cs" />
+    <Compile Include="Concrete\Extensions.cs" />
     <Compile Include="DTO\CampaignSummary.cs" />
     <Compile Include="Entities\Campaign.cs" />
+    <Compile Include="Entities\Cake\Conversion.cs" />
     <Compile Include="Entities\TrafficType.cs" />
     <Compile Include="Entities\Country.cs" />
     <Compile Include="Entities\Person.cs" />
@@ -87,6 +90,10 @@
     <Compile Include="Migrations\201209191732527_FixCurrencyTypes.cs" />
     <Compile Include="Migrations\201209191732527_FixCurrencyTypes.Designer.cs">
       <DependentUpon>201209191732527_FixCurrencyTypes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201209201838238_Conversions.cs" />
+    <Compile Include="Migrations\201209201838238_Conversions.Designer.cs">
+      <DependentUpon>201209201838238_Conversions.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -130,6 +137,12 @@
     <EmbeddedResource Include="Migrations\201209191732527_FixCurrencyTypes.resx">
       <DependentUpon>201209191732527_FixCurrencyTypes.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201209201838238_Conversions.resx">
+      <DependentUpon>201209201838238_Conversions.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
