fix bug clicking pub rep header row

--- a/1/EomTool/EomApp1/app.config
+++ b/1/EomTool/EomApp1/app.config
@@ -11,8 +11,7 @@
   </configSections>
   <dataConfiguration defaultDatabase="DADatabaseR1Entities"/>
   <connectionStrings>
-    <add name="PetaPocoConnectionString"
-      connectionString="Data Source=biz2\da;Initial Catalog=DADatabaseR1;User=sa;Password=sp0ngbOb"
+    <add name="PetaPocoConnectionString" connectionString="Data Source=biz2\da;Initial Catalog=DADatabaseR1;User=sa;Password=sp0ngbOb"
       providerName="System.Data.SqlClient" />
     <add name="EomApp1.Properties.Settings.DADatabaseR1ConnectionString"
       connectionString="Data Source=biz2\da;Initial Catalog=DADatabaseR1;User=sa;Password=sp0ngbOb"
