--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Concrete\EFDbContext.cs" />
     <Compile Include="Concrete\Extensions.cs" />
     <Compile Include="DTO\CampaignSummary.cs" />
+    <Compile Include="Entities\Cake\DailySummary.cs" />
     <Compile Include="Entities\Cake\MonthlySummary.cs" />
     <Compile Include="Entities\Campaign.cs" />
     <Compile Include="Entities\Cake\Conversion.cs" />
@@ -101,6 +102,10 @@
     <Compile Include="Migrations\201209272230008_MonthlySummaries.cs" />
     <Compile Include="Migrations\201209272230008_MonthlySummaries.Designer.cs">
       <DependentUpon>201209272230008_MonthlySummaries.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201210041739405_DailySummaries.cs" />
+    <Compile Include="Migrations\201210041739405_DailySummaries.Designer.cs">
+      <DependentUpon>201210041739405_DailySummaries.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -149,6 +154,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201209272230008_MonthlySummaries.resx">
       <DependentUpon>201209272230008_MonthlySummaries.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201210041739405_DailySummaries.resx">
+      <DependentUpon>201210041739405_DailySummaries.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
