update campaign fields

--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -107,6 +107,10 @@
     <Compile Include="Migrations\201210041739405_DailySummaries.Designer.cs">
       <DependentUpon>201210041739405_DailySummaries.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201210051910596_UpdateCampaignFields.cs" />
+    <Compile Include="Migrations\201210051910596_UpdateCampaignFields.Designer.cs">
+      <DependentUpon>201210051910596_UpdateCampaignFields.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -157,6 +161,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201210041739405_DailySummaries.resx">
       <DependentUpon>201210041739405_DailySummaries.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201210051910596_UpdateCampaignFields.resx">
+      <DependentUpon>201210051910596_UpdateCampaignFields.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
