--- a/1/ApiClient/App.config
+++ b/1/ApiClient/App.config
@@ -1,13 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0"?>
 <configuration>
   <configSections>
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="CakeDbContext" connectionString="data source=biz2\da;initial catalog=Cake;Integrated Security=true; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
-    <add name="DirectTrackDbContext" connectionString="data source=.\sql2;initial catalog=DirectTrack;Integrated Security=true; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="CakeDbContext" connectionString="data source=biz2\da;initial catalog=Cake;Integrated Security=true; MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
+    <add name="DirectTrackDbContext" connectionString="data source=.\sql2;initial catalog=DirectTrack;Integrated Security=true; MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework"/>
   </entityFramework>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
