--- a/1/ApiClient.Models.DirectTrack/App.config
+++ b/1/ApiClient.Models.DirectTrack/App.config
@@ -5,8 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DirectTrackDbContext" connectionString="data source=.\sql2;initial catalog=DirectTrack;Integrated Security=true; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+    <add name="DirectTrackDbContext" connectionString="data source=.\sql2;initial catalog=DirectTrack;Integrated Security=true; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" /><add name="DirectTrackEntities" connectionString="metadata=res://*/ModelFirst.DirectTrack.csdl|res://*/ModelFirst.DirectTrack.ssdl|res://*/ModelFirst.DirectTrack.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql2;initial catalog=DirectTrack;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="DirectTrackEntities1" connectionString="metadata=res://*/ModelFirst.DTModel.csdl|res://*/ModelFirst.DTModel.ssdl|res://*/ModelFirst.DTModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql2;initial catalog=DirectTrack;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
