period_id; extraitems

--- a/1/EomTool/EomApp1/app.config
+++ b/1/EomTool/EomApp1/app.config
@@ -14,7 +14,7 @@
     <add name="PetaPocoConnectionString" connectionString="Data Source=biz2\da;Initial Catalog=DADatabaseR1;User=sa;Password=sp0ngbOb"
       providerName="System.Data.SqlClient" />
     <add name="EomApp1.Properties.Settings.DADatabaseR1ConnectionString"
-      connectionString="Data Source=biz2\da;Initial Catalog=DADatabaseR1;User=sa;Password=sp0ngbOb"
+      connectionString="Data Source=biz2\da;Initial Catalog=zDADatabaseSept2012Test;User ID=sa"
       providerName="System.Data.SqlClient" />
     <add name="EomApp1.Properties.Settings.Nov10Eom2ConnectionString2"
       connectionString="Data Source=aaron\sqlexpress;Initial Catalog=Nov10Eom2;Integrated Security=True" />
@@ -45,7 +45,7 @@
       connectionString="Data Source=biz2\da;Initial Catalog=DADatabaseApril2012_before_cake;Integrated Security=True"
       providerName="System.Data.SqlClient" />
     <add name="EomApp1.Properties.Settings.OverrideConnectionString"
-      connectionString="Data Source=biz2\da;Initial Catalog=zDADatabaseJuly2012Test2;User=sa;Password=sp0ngbOb" />
+      connectionString="Data Source=biz2\da;Initial Catalog=zDADatabaseSept2012Test;User=sa;Password=sp0ngbOb" />
     <add name="EomApp1.Properties.Settings.EomToolSecurityConnectionString"
       connectionString="Data Source=biz2\da;Initial Catalog=EomToolSecurity;Integrated Security=True"
       providerName="System.Data.SqlClient" />
@@ -219,10 +219,10 @@
   <applicationSettings>
     <EomApp1.Properties.Settings>
       <setting name="OverrideDate" serializeAs="String">
-        <value>2012-07-01</value>
+        <value>2012-09-01</value>
       </setting>
       <setting name="TestMode" serializeAs="String">
-        <value>True</value>
+        <value>False</value>
       </setting>
       <setting name="TestUserIdentities" serializeAs="String">
         <value>directagents\aanodide,directagents\kslesinsky,aaron-pavillion\aaron</value>
