--- a/1/EomTool/EomApp1/Properties/Settings.settings
+++ b/1/EomTool/EomApp1/Properties/Settings.settings
@@ -5,10 +5,10 @@
     <Setting Name="DADatabaseR1ConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=biz2\da;Initial Catalog=DADatabaseR1;User=sa;Password=sp0ngbOb&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=biz2\da;Initial Catalog=zDADatabaseSept2012Test;User ID=sa&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=biz2\da;Initial Catalog=DADatabaseR1;User=sa;Password=sp0ngbOb</Value>
+      <Value Profile="(Default)">Data Source=biz2\da;Initial Catalog=zDADatabaseSept2012Test;User ID=sa</Value>
     </Setting>
     <Setting Name="Nov10Eom2ConnectionString2" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
@@ -108,15 +108,15 @@
     <Setting Name="OverrideConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=biz2\da;Initial Catalog=zDADatabaseJuly2012Test2;User=sa;Password=sp0ngbOb&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=biz2\da;Initial Catalog=zDADatabaseSept2012Test;User=sa;Password=sp0ngbOb&lt;/ConnectionString&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=biz2\da;Initial Catalog=zDADatabaseJuly2012Test2;User=sa;Password=sp0ngbOb</Value>
+      <Value Profile="(Default)">Data Source=biz2\da;Initial Catalog=zDADatabaseSept2012Test;User=sa;Password=sp0ngbOb</Value>
     </Setting>
     <Setting Name="OverrideDate" Type="System.DateTime" Scope="Application">
-      <Value Profile="(Default)">2012-07-01</Value>
+      <Value Profile="(Default)">2012-09-01</Value>
     </Setting>
     <Setting Name="TestMode" Type="System.Boolean" Scope="Application">
-      <Value Profile="(Default)">True</Value>
+      <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="EomToolSecurityConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
